# volume-renderer

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
data/: README.md
shaders/: .gitkeep  raycast.frag  raycast.vert
src/: main.cpp
src/app/: .gitkeep
src/gfx/: .gitkeep  Camera.cpp  Camera.h  FullscreenQuad.cpp  FullscreenQuad.h  Shader.cpp  Shader.h  ShaderSource.cpp  ShaderSource.h  Texture1D.cpp  Texture1D.h  Texture3D.cpp  Texture3D.h
src/render/: .gitkeep  Compositing.h  RayBox.h  TransferFunction.cpp  TransferFunction.h
src/ui/: .gitkeep
src/ui/backends/: .gitkeep
src/volume/: .gitkeep  SyntheticVolume.cpp  SyntheticVolume.h  VolumeData.cpp  VolumeData.h
tests/: CMakeLists.txt  test_camera.cpp  test_compositing.cpp  test_ray_box.cpp  test_shader_source.cpp  test_smoke.cpp  test_synthetic_volume.cpp  test_transfer_function.cpp  test_volume_data.cpp
